# CLAUDE_CODE_AI_COURSE

./: AI 程式碼助理深度解析與教學.md  CLAUDE.md  Claude Code 初學者入門白皮書.md  情境驅動學習法_Claude_Code指令掌握.md  課程資料夾結構說明.md
.claude/: settings.local.json
AI_Programming_15h_Course_v2.0/: DIRECTORY_CLEANUP_REPORT.md  README.md  WBS_工作分解結構.md
AI_Programming_15h_Course_v2.0/00_情境驅動學習法入門/: README.md
AI_Programming_15h_Course_v2.0/00_課程導覽/: README.md  學習路徑指引.md  工具安裝指南.md  常見問題FAQ.md
AI_Programming_15h_Course_v2.0/01_AI編程基礎認知/: README.md
AI_Programming_15h_Course_v2.0/02.5_進階指令整合應用/: README.md
AI_Programming_15h_Course_v2.0/02_CLI工具精通/: README.md
AI_Programming_15h_Course_v2.0/03_IDE整合/: README.md
AI_Programming_15h_Course_v2.0/04_TDD_BDD實作/: README.md
AI_Programming_15h_Course_v2.0/05_CI_CD自動化/: README.md
AI_Programming_15h_Course_v2.0/06_多代理人協作與MCP/: README.md
AI_Programming_15h_Course_v2.0/07_DDD與AI/: README.md
AI_Programming_15h_Course_v2.0/08_進階資料工作流/: README.md
AI_Programming_15h_Course_v2.0/09_工具差異比較/: README.md
AI_Programming_15h_Course_v2.0/10_安全與最佳實踐/: README.md
AI_Programming_15h_Course_v2.0/11_實戰綜合項目/: README.md
AI_Programming_15h_Course_v2.0/11_實戰綜合項目/起始程式碼/task_management_api/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
AI_Programming_15h_Course_v2.0/12_未來展望/: README.md  _MODULE_COMPLETION_SUMMARY.md
docs/: AI 程式碼助理深度解析與教學.md  AI編程速成課程_完整大綱_v2.0.md  Claude Code 初學者入門白皮書.md  情境驅動學習法_Claude_Code指令掌握.md  課程資料夾結構說明.md
ppt/: VibeCoding_full_text.txt  VibeCoding全心法.md  Visual_Flow_UI_Consistency_Guide.md
ppt/dev/: README.md  (+12 more)
(+330 files in other folders)
